# ReverseShellKiller

./: .gitignore  Dockerfile  README.md  ReverseShellKiller.iss  ReverseShellKiller.spec  linux_build.spec  main.py  pyproject.toml  requirements.txt  setup.py
grafana_docker/: docker-compose.yaml  prometheus.yml
landing_page/: README.md  index.html  script.js  styles.css
landing_page/downloads/: reverse_shell_killer
revshell_detector/: __init__.py  config.py  core.py  email_notifier.py  llm_detector.py  logger.py  metrics.py  process_arg_detector.py
scripts/: install_service.sh  uninstall_service.sh
