[project]
name = "reverse-shell-killer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.11.0",
    "prometheus-client>=0.21.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.3",
    "pyinstaller>=6.13.0",
    "setuptools>=79.0.1",
]
